# Mobile_Robot_Control

./: .gitignore  LICENSE  README.md
RTIMULibCal/Output/: RTIMULib.ini  RTIMULibCal
dc_motor_driver/params/: motor_params.yaml
dc_motor_driver/src/: motor_driver.py
i2c_imu/: CMakeLists.txt
i2c_imu/launch/: mpu_9150.launch  mpu_9150_param.launch
i2c_imu/src/: i2c_imu_node.cpp
imu_node/: CMakeLists.txt  package.xml
imu_node/src/: SparkFunIMU.h  SparkFunLSM303C.cpp  SparkFunLSM303C.h  echo_imu.py  imu_node.cpp
localization/: package.xml
localization/scripts/: localization.py
random_walk/: CMakeLists.txt  package.xml
random_walk/src/: walker.cpp
read_sonars/: CMakeLists.txt  package.xml
read_sonars/launch/: read_sonars.launch  read_sonars.launch~.xml
read_sonars/scripts/: read_sonars.py  read_sonars.py~
wall_following/: mainpage.dox  manifest.xml
wall_following/scripts/: follower_new.py  follower_new.py.save
